--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "node scripts/watch.mjs",
-    "build": "node scripts/build.mjs && electron-builder"
+    "build": "node scripts/build.mjs && electron-builder",
+    "lint": "eslint --ext .js,.mjs,.vue --ignore-path .eslintignore --fix .",
+    "format": "prettier .  --write"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -15,10 +17,16 @@
     "vue": "^3.2.22"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/eslint-parser": "^7.16.5",
     "@vitejs/plugin-vue": "^1.9.4",
     "chalk": "^4.1.2",
     "electron": "16.0.0",
     "electron-builder": "^22.13.1",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "prettier": "^2.5.1",
     "typescript": "^4.4.4",
     "vite": "^2.6.14"
   },
